drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog

SVN TRUNK

- Added some command line options to the stand-alone JACK client
  program (--help and --version information).

- Reimplemented mouse-wheel stepping on combo-dial knob widgets.

- LV2 state chunk retrieve/save implementation complete. (EXPERIMENTAL)

- Current element selection and stabilization.

- Preset load/save is now fully functional.

- Access to core engine instance has been slightly refactored.

- Classic ADSR replaced by custom one-shot drum-mode specific envelope
  generators (Attack, Delay1, Level2, Delay2).

- Detached generic double-linked list class into its own header.


0.0.0  2012-10-03  Initial change-log entry.